# kawa-rs

./: Cargo.toml  README.md  demo.json
src/: account.rs  lib.rs  main.rs
src/kawacore/: gui.rs
src/kawacore/models/: account.rs  mod.rs  package.rs
src/lib/: authentication.rs  error.rs  gui.rs  mod.rs  model.rs
src/lib/models/: account.rs  app.rs  part.rs
