[package]
name = "kawa-rs"
version = "0.0.1"
authors = ["koopa1338 <sinner1991@gmail.com>"]
edition = "2021"

[dependencies]
eframe = { version = "0.17.0", features = ["persistence"] }
reqwest = { version = "0.11.9", features = ["cookies"] }
rfd = "0.8.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
lazy-static-include = "3.1.1"

[profile.release]
lto = true
