[package]
name = "kawa-rs"
version = "0.0.1"
authors = ["koopa1338 <sinner1991@gmail.com>"]
edition = "2021"
license-file = "LICENSE.md"

[dependencies]
eframe = { version = "0.19.0", features = ["persistence"] }
reqwest = { version = "0.11.11", features = ["cookies"] }
rfd = "0.10.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.0", features = ["full"] }
lazy-static-include = "3.1.2"

[profile.release]
lto = true
