[package]
name = "kawa-rs"
version = "0.0.1"
authors = ["koopa1338 <sinner1991@gmail.com>"]
edition = "2021"
license-file = "LICENSE.md"

[dependencies]
eframe = { version = "0.22", features = ["persistence"] }
reqwest = { version = "0.11", features = ["cookies"] }
rfd = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21", features = ["full"] }
lazy-static-include = "3.2"

[profile.release]
lto = true
